==> changeworld0823/WaterValve/software/CubeMX_prj/LinkSDK/wrappers/wrapper.c <==
#include "infra_types.h"
#include "infra_defs.h"
#include "infra_compat.h"
#include "wrappers_defs.h"
#include "at_wrapper.h"
#include "stdarg.h"
#include <stdlib.h>
#include <string.h>
#include "stm32f1xx_hal.h"
#include "cmsis_os.h"
#include "wh_lte.h"
#include "at_parser.h"
#define VALVE_PRODUCT_KEY         "a12EOnXtII4"
#define VALVE_PRODUCT_SECRET      "Ly7n1CckDCCnJu6u"
#define VALVE_DEVICE_NAME         "WaterValve_1"
#define VALVE_DEVICE_SECRET       "d7b86cffe99336eef9028523fb959044"
#define VALVE_FIRMWARE_VERSION    "app-1.0.0-20200716.1000"
#define RING_BUFFER_SIZE            (128)
#define HAL_SEM_MAX_COUNT           (10)
#define HAL_SEM_INIT_COUNT          (0)
#define DEFAULT_THREAD_NAME         "linkkit_task"
#define DEFAULT_THREAD_SIZE         (256)
#define TASK_STACK_ALIGN_SIZE       (4)
#define DOMAIN_RSP_MAX_LEN					128
#define MAX_LINK_NUM								2
#define DEFAULT_CMD_LEN							64
#define DEFAULT_RSP_LEN							64

int32_t HAL_AT_Uart_Deinit(uart_dev_t *uart)
{
	HAL_StatusTypeDef ret;
    ret = HAL_UART_DeInit(p_at_uart);
    if(HAL_OK != ret){
        return -1;
    }
    return 0;
}

int32_t HAL_AT_Uart_Init(uart_dev_t *uart)
{
	char c;
    HAL_StatusTypeDef ret;
    if (uart == NULL) {
        return -1;
    }

    g_uart_rx_buf.head = 0;
    g_uart_rx_buf.tail = 0;
    ret = HAL_UART_Receive_IT(p_at_uart, (uint8_t *)&c, 1);
    if(HAL_OK != ret){
        return -1;
    }
    return 0;
}

int32_t HAL_AT_Uart_Recv(uart_dev_t *uart, void *data, uint32_t expect_size,
uint32_t *recv_size, uint32_t timeout)
{
	uint32_t tmp, read_size;
    uint8_t *buf = (uint8_t *)data;
    uint32_t start_time, expired_time;

    start_time = xTaskGetTickCount();
    *recv_size = 0;

    expect_size =  expect_size > RING_BUFFER_SIZE ? RING_BUFFER_SIZE : expect_size;

    for (;;) {
        read_size = expect_size;

        tmp = 0;
         /* Loop until data received */
        while (read_size--)
        {
          if (g_uart_rx_buf.head != g_uart_rx_buf.tail)
          {
            /* serial data available, so return data to user */
            *buf++ = g_uart_rx_buf.data[g_uart_rx_buf.head++];
            tmp++;

            /* check for ring buffer wrap */
            if (g_uart_rx_buf.head >= RING_BUFFER_SIZE)
            {
              /* Ring buffer wrap, so reset head pointer to start of buffer */
              g_uart_rx_buf.head = 0;
            }
          }
        }

        *recv_size += tmp;
        expect_size -= tmp;

        if(expect_size == 0)
        {
            break;
        }

        expired_time = xTaskGetTickCount() - start_time;
        if (expired_time > timeout)
        {
            return -1;
        }
    }
    
    return 0;
}

int32_t HAL_AT_Uart_Send(uart_dev_t *uart, const void *data, uint32_t size, uint32_t timeout)
{
	uint32_t tickstart;
    g_uart_tx_flag = 0;
    
    if (HAL_UART_Transmit_IT(p_at_uart, (uint8_t*)data, size) != HAL_OK)
    {
       return -1;
    }
    
    tickstart = xTaskGetTickCount();
    while(g_uart_tx_flag!=1)
    {
      if((xTaskGetTickCount()-tickstart) > timeout) {
        return -1;
      }
    }
    
    return 0;
}

int HAL_ThreadCreate(
void **thread_handle,
void *(*work_routine)(void *),
void *arg,
hal_os_thread_param_t *hal_os_thread_param,
int *stack_used)
{
	char *name;
    size_t stacksize;
    //osPriority prio;
    osThreadDef_t thread_def;
    
    osThreadId handle;
    
    if (thread_handle == NULL){
        return -1;
    }
    
    if (work_routine == NULL){
        return -1;
    }
    
    if (hal_os_thread_param == NULL){
        return -1;
    }
    if (stack_used == NULL){
        return -1;
    }
    
    if (stack_used != NULL) {
        *stack_used = 0;
    }
    
    if (!hal_os_thread_param->name) {
        name = DEFAULT_THREAD_NAME;
    } else {
        name = hal_os_thread_param->name;
    }

    if (hal_os_thread_param->stack_size == 0) {
        stacksize = DEFAULT_THREAD_SIZE;
    } else {
        stacksize = hal_os_thread_param->stack_size;
    }

    thread_def.name = name;
    thread_def.pthread = (os_pthread)work_routine;
    thread_def.tpriority = (osPriority)hal_os_thread_param->priority;
    thread_def.instances = 0;
    thread_def.stacksize = (stacksize + TASK_STACK_ALIGN_SIZE-1)/TASK_STACK_ALIGN_SIZE;

    handle = osThreadCreate(&thread_def, arg);
    if( NULL == handle){
        return -1;
    }
    *thread_handle = (void*)handle;
    return 0;
}
