==> KKKelvin7/Smart_Washing_Machine_8266/c-sdk/wrappers/wrapper.c <==
#include "infra_types.h"
#include "infra_defs.h"
#include "infra_compat.h"
#include "wrappers_defs.h"
#include "at_wrapper.h"
#include "stdarg.h"
#include "FreeRTOS.h"
#include "timers.h"
#include "queue.h"
#include "semphr.h"
#include "portmacro.h"
#include "mimxrt1052.h"
#include "fsl_trng.h"
#include "fsl_clock.h"
#include "fsl_lpuart.h"
#include "fsl_debug_console.h"
#define EXAMPLE_PRODUCT_KEY         "a11YVxsGk3F"    //"a1GrD4tz46C"
#define EXAMPLE_PRODUCT_SECRET      "nyvvTvStgB8RuUR8"    //"8iOiz1N7KwvHIw2A"
#define EXAMPLE_DEVICE_NAME         "SmartWashingMachine"    //"Smart_wm_K"
#define EXAMPLE_DEVICE_SECRET       "QTk4asUJACUMUPatdHVwuhIOcO6dw6BK"    //"757995dc833d47e689718922aab205f2"
#define EXAMPLE_FIRMWARE_VERSION    "app-1.0.0-20190118.1000"
#define EIO 5
#define UART_TX_INT_THRESHOLD 1
#define RING_BUFFER_SIZE            (128)
#define HAL_SEM_MAX_COUNT           (10)
#define HAL_SEM_INIT_COUNT          (0)
#define DEFAULT_THREAD_NAME         "linkkit_task"
#define DEFAULT_THREAD_SIZE         (256)
#define TASK_STACK_ALIGN_SIZE       (4)

int32_t HAL_AT_Uart_Deinit(uart_dev_t *uart)
{
	LPUART_Deinit((LPUART_Type *)s_uartBaseAddrs[uart->port]);
	HAL_SemaphoreDestroy(uart_rxwait_sem);
	HAL_SemaphoreDestroy(uart_txwait_sem);
	HAL_SemaphoreDestroy(check_st_sem);
	
	return (int32_t)0;

}

int32_t HAL_AT_Uart_Init(uart_dev_t *uart)
{
#if USE_LPUART_RTOS
	uint8_t *addr;
	size_t size;
	lpuart_config.srcclk = BOARD_DebugConsoleSrcFreq();
	lpuart_config.base   = (LPUART_Type *)s_uartBaseAddrs[uart->port];
	LPUART_RTOS_Init(&handle, &t_handle, &lpuart_config);
	NVIC_SetPriority(LPUART3_IRQn, (1<<__NVIC_PRIO_BITS) - 1);
	size = 512;
	addr = HAL_Malloc(size);
	if (addr != NULL){
		LPUART_TransferStartRingBuffer((LPUART_Type *)s_uartBaseAddrs[uart->port], &s_handle[uart->port],
	                            		addr, size);
	}else{
		return -1;
	}
#else
	lpuart_config_t config = {0};
	status_t status;
	uint8_t *addr;
	size_t size;
	
	LPUART_GetDefaultConfig(&config);
	config.baudRate_Bps = uart->config.baud_rate;
	config.enableTx = true;
	config.enableRx = true;
/*Kelvin add for receive action.*/
/*      uart3.rxTransfer.data = &uart3_rxbuf;
        handle->txTransfer.data = (uint8_t *)buffer;
*/        
	switch (uart->config.parity)
	{
		case NO_PARITY:
			config.parityMode = kLPUART_ParityDisabled;
			break;
		case ODD_PARITY:
			config.parityMode = kLPUART_ParityOdd;
			break;
		case EVEN_PARITY:
			config.parityMode = kLPUART_ParityEven;
			break;
		default:
			return EIO;
	}

	switch (uart->config.data_width)
	{
#if defined(FSL_FEATURE_LPUART_HAS_7BIT_DATA_SUPPORT) && FSL_FEATURE_LPUART_HAS_7BIT_DATA_SUPPORT
		case DATA_WIDTH_7BIT:
			config.dataBitsCount = kLPUART_SevenDataBits;
			break;
#endif
		case DATA_WIDTH_8BIT:
			config.dataBitsCount = kLPUART_EightDataBits;
			break;
		default:
			return EIO;
	}

	switch (uart->config.stop_bits)
	{
		case STOP_BITS_1:
			config.stopBitCount = kLPUART_OneStopBit;
			break;
		case STOP_BITS_2:
			config.stopBitCount = kLPUART_TwoStopBit;
			break;
		default:
			return EIO;
	}
	
	/* TODO: Need to have array to save clock source for all uart instances */
	uint32_t freq = 0;
	freq = BOARD_DebugConsoleSrcFreq();
	status = LPUART_Init((LPUART_Type *)s_uartBaseAddrs[uart->port], &config, freq);
	
	if (kStatus_Success != status)
		return EIO;
	

	/* Create handle for LPUART */
	LPUART_TransferCreateHandle((LPUART_Type *)s_uartBaseAddrs[uart->port], &s_handle[uart->port],
								uart_callback, uart);

	if (uart->port == 2){

		size = 512;
		addr = HAL_Malloc(size);
		if (addr != NULL){
		    LPUART_TransferStartRingBuffer((LPUART_Type *)s_uartBaseAddrs[uart->port], &s_handle[uart->port],
		                                    addr, size);
		}else{
		    return -1;
		}
	}
        
#if 1
        
#else
	xTaskCreate(
                  uart2_interrupt_handle_task,       /* Function that implements the task. */
                  "u2_isr_handle",          /* Text name for the task. */
                  256,      /* Stack size in words, not bytes. */
                  NULL,    /* Parameter passed into the task. */
                  (2),/* Priority at which the task is created. */
                  &isr_uart_handle);      /* Used to pass out the created task's handle. */
	uart_rxwait_sem = HAL_SemaphoreCreate();
	uart_txwait_sem = HAL_SemaphoreCreate();
	check_st_sem = HAL_SemaphoreCreate();
        
#endif
#endif
	return 0;
}

int32_t HAL_AT_Uart_Recv(uart_dev_t *uart, void *data, uint32_t expect_size,
                         uint32_t *recv_size, uint32_t timeout)
{
  #if USE_LPUART_RTOS
  int ret = LPUART_RTOS_Receive(&handle, data, expect_size, recv_size,timeout/portTICK_PERIOD_MS);
  if(ret != 0){
	ret = EIO;
  }
  return ret;
#else
	if(uart_rxstatus == kStatus_LPUART_RxBusy){
			return EIO;
		}

	lpuart_transfer_t xfer;
    int32_t ret = 0;
    LPUART_Type *uartBase = (LPUART_Type *)s_uartBaseAddrs[uart->port];
    lpuart_handle_t *handle = &s_handle[uart->port];

    if (timeout == 0)
    {
        timeout = 1000;
    }

    xfer.data = (uint8_t *)data;
    xfer.dataSize = expect_size;
	uart_rxstatus = kStatus_LPUART_RxBusy;
    if (kStatus_Success != LPUART_TransferReceiveNonBlocking(uartBase, handle, &xfer, recv_size))
    {
		uart_rxstatus = kStatus_LPUART_RxIdle;
        return EIO;
    }
	



    if (HAL_Uart_rxWait(timeout) != 0)
    {
        LPUART_TransferAbortReceive(uartBase, handle);
		uart_rxstatus = kStatus_LPUART_RxIdle;

        *recv_size = 0;

        ret = EIO;
    }
    else
    {
        *recv_size = expect_size;
    }
  return ret;
#endif
  
}

int32_t HAL_AT_Uart_Send(uart_dev_t *uart, const void *data, uint32_t size, uint32_t timeout)
{
  #if USE_LPUART_RTOS
  if (timeout == 0)
  {
	  timeout = 1000;
  }
  int ret = 0;
  ret = LPUART_RTOS_Send(&handle, (uint8_t *)data, size,timeout/portTICK_PERIOD_MS);
  if(ret != 0){
	

	ret = EIO;

  }
  return ret;
#else
	if(uart_status == kStatus_LPUART_TxBusy){
		return EIO;
	}
	lpuart_transfer_t xfer;
    int32_t ret = 0;
    LPUART_Type *uartBase = (LPUART_Type *)s_uartBaseAddrs[uart->port];
    lpuart_handle_t *handle = &s_handle[uart->port];

    if (timeout == 0)
    {
        timeout = 1000;
    }



    if (size < UART_TX_INT_THRESHOLD)
    {
        LPUART_WriteBlocking(uartBase, (uint8_t *)data, size);
    }
    else
    {
        xfer.data = (uint8_t *)data;
        
        xfer.dataSize = size;
		uart_status = kStatus_LPUART_TxBusy;
        LPUART_TransferSendNonBlocking(uartBase, handle, &xfer);
        /* Wait for transfer finish */
       
        if (HAL_Uart_txWait(timeout) != 0)
        {
            LPUART_TransferAbortSend(uartBase, handle);
			uart_status = kStatus_LPUART_TxIdle;

            ret = EIO;
        }
    }


    return ret;
#endif
}

int HAL_ThreadCreate(
            void **thread_handle,
            void *(*work_routine)(void *),
            void *arg,
            hal_os_thread_param_t *hal_os_thread_param,
            int *stack_used)
{
    char *name;
    size_t stacksize;

//    osThreadDef_t thread_def;
    
//    osThreadId handle;
    
    if (thread_handle == NULL){
        return -1;
    }
    
    if (work_routine == NULL){
        return -1;
    }
    
    if (hal_os_thread_param == NULL){
        return -1;
    }
    if (stack_used == NULL){
        return -1;
    }
    
    if (stack_used != NULL) {
        *stack_used = 0;
    }
    
    if (!hal_os_thread_param->name) {
        name = DEFAULT_THREAD_NAME;
    } else {
        name = hal_os_thread_param->name;
    }

    if (hal_os_thread_param->stack_size == 0) {
        stacksize = DEFAULT_THREAD_SIZE;
    } else {
        stacksize = hal_os_thread_param->stack_size;
    }

//    thread_def.name = name;
//    thread_def.pthread = (os_pthread)work_routine;
//    thread_def.tpriority = (osPriority)hal_os_thread_param->priority;
//    thread_def.instances = 0;
//    thread_def.stacksize = (stacksize + TASK_STACK_ALIGN_SIZE-1)/TASK_STACK_ALIGN_SIZE;
//
//    handle = osThreadCreate(&thread_def, arg);
    stacksize = (stacksize + TASK_STACK_ALIGN_SIZE - 1) / TASK_STACK_ALIGN_SIZE;
    static TaskHandle_t xtask = NULL;
    BaseType_t ret = xTaskCreate((TaskFunction_t )(work_routine), name,stacksize,arg,hal_os_thread_param->priority,&xtask);
    if( NULL == ret){
        return -1;
    }
    *thread_handle = (void*)xtask;
    return 0;
}
